Remove any build steps, run typescript natively

--- a/services/cannon/Dockerfile
+++ b/services/cannon/Dockerfile
@@ -5,48 +5,22 @@
 
 # Use the official lightweight Node.js image.
 # https://hub.docker.com/_/node
-FROM node:23.10.0-slim AS builder
+FROM node:23.10.0-slim
 
-# Set up the workspace structure
+# Set up the workspace directory and cd into it
 WORKDIR /usr/workspace
 
-# Copy root package files
-COPY package*.json ./
-COPY tsconfig.json ./
-
-# Copy all packages
-COPY packages packages/
+# Copy the root package.json and package-lock.json
+COPY package.json package-lock.json ./
 
 # Copy the service
 COPY services/cannon services/cannon/
 
-# Install dependencies, build, and remove dev dependencies
-WORKDIR /usr/workspace
-RUN npm ci
-RUN npm run build
-# RUN cd services/cannon && npm prune --production
+# Copy all packages
+COPY packages packages/
 
-# Production image
-FROM node:23.10.0-slim
-
-# Create and set working directory
-WORKDIR /usr/workspace/services/cannon
-
-# Copy package.json files needed for running the application
-COPY --from=builder /usr/workspace/services/cannon/package*.json ./
-COPY --from=builder /usr/workspace/services/cannon/dist ./dist
-
-# Copy the complete node_modules from workspace root
-COPY --from=builder /usr/workspace/node_modules ../../node_modules
-
-# Copy the entire packages folder so that local dependencies are intact
-COPY --from=builder /usr/workspace/packages ../../packages
-
-# Copy environment files
-COPY services/cannon/envs ./envs
-
-# Expose the port
-EXPOSE 8080
+# Install dependencies
+RUN npm ci --omit=dev && npm ci --workspaces --omit=dev
 
 # Start the application
-CMD ["npm", "run", "start:server"]
+CMD ["npm", "--prefix=services/cannon", "run", "start:server"]
