--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
     "services/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces --if-present",
-    "clean": "npm run clean --workspaces --if-present",
+    "type-check": "npm run type-check --workspaces --if-present",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx,json,yml,yaml}\"",
-    "lint:fix": "eslint \"**/*.{js,jsx,ts,tsx,json,yml,yaml}\" --fix",
-    "test": "jest --config jest.config.ts --coverage"
+    "test": "jest --config ./jest.config.mjs"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.17",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
@@ -32,6 +30,7 @@
     "eslint-plugin-yml": "^1.16.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "jest-html-reporter": "^4.1.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.4.2",
     "supertest": "^6.3.4",
