--- a/packages/whatsapp/package.json
+++ b/packages/whatsapp/package.json
@@ -1,27 +1,14 @@
 {
   "name": "whatsapp",
   "version": "1.0.0",
-  "description": "A package that will contain whatsapp api helper functions",
   "type": "module",
-  "exports": {
-    "production": "./dist/index.js",
-    "default": "./src/index.ts"
-  },
+  "description": "A package that will contain whatsapp api helper functions",
+  "main": "src/index.ts",
   "scripts": {
-    "build": "tsc",
-    "clean": "rm -rf dist",
-    "test": "jest --config jest.config.ts"
+    "type-check": "tsc --noEmit",
+    "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.21.2"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
   }
 }
