--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,18 @@
+/**
+ * We do not build any ts files, since we run node --experimental-strip-types 
+ * This tsconfig is only used for type checking
+ */
 {
   "compilerOptions": {
     "target": "ESNext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "NodeNext",                                /* Specify what module code is generated. */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "strictNullChecks": true,                            /* When type checking, take into account 'null' and 'undefined'. */
-    "skipLibCheck": true ,                                /* Skip type checking all .d.ts files. */
-    "erasableSyntaxOnly": true
+    "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
+    "allowImportingTsExtensions": true,                  /* Allow importing TypeScript files with extensions other than .ts. */  
+    "noEmit": true,                                      /* Do not emit outputs. */
+    "verbatimModuleSyntax": true                         /* Use the original module syntax for imports and exports. */
+    // "erasableSyntaxOnly": true                        /* Only allow the use of the erasable syntax. Not totally supported yet */
   }
 }
