Only install from the root directory

--- a/services/joby/Dockerfile
+++ b/services/joby/Dockerfile
@@ -20,7 +20,7 @@ COPY services/joby services/joby/
 COPY packages packages/
 
 # Install dependencies
-RUN npm ci --omit=dev && npm ci --workspaces --omit=dev
+RUN npm ci --omit=dev
 
 # Start the application
 CMD ["npm", "--prefix=services/joby", "run", "start:server"]
