--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,6 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-      # pages: write      # required for deploy-pages
       id-token: write
 
     steps:
@@ -28,8 +27,8 @@ jobs:
         with:
           node-version: '22.x'
 
-      # - name: Install Dependencies
-      #   run: npm install
+      - name: Install Dependencies
+        run: npm ci
       
       - name: Run Jest Test Suite
         run: npm test
