--- a/services/capish/Dockerfile
+++ b/services/capish/Dockerfile
@@ -20,7 +20,7 @@ COPY services/capish services/capish/
 COPY packages packages/
 
 # Install dependencies
-RUN npm ci --omit=dev && npm ci --workspaces --omit=dev
+RUN npm ci --omit=dev
 
 # Start the application
 CMD ["npm", "--prefix=services/capish", "run", "start:server"]
