--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -18,13 +18,13 @@ jobs:
 
       - uses: ./.github/actions/repo-warm-up
 
-      # - name: Use Node.js 22.x
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: '22.x'
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.x'
 
-      - name: Install Dependencies
-        run: npm ci
+      # - name: Install Dependencies
+      #   run: npm ci
       
       - name: Run Type Check
         run: npm run type-check
