--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -23,8 +23,8 @@ jobs:
         with:
           node-version: '22.x'
 
-      # - name: Install Dependencies
-      #   run: npm ci
+      - name: Install Dependencies
+        run: npm ci
       
       - name: Run Type Check
         run: npm run type-check
