--- a/.github/actions/repo-warm-up/action.yml
+++ b/.github/actions/repo-warm-up/action.yml
@@ -27,9 +27,6 @@ runs:
 
     - name: Install and Build TypeScript Actions
       run: |
-        for dir in .github/actions/*/; do
-          if [ -f "$dir/package.json" ]; then
-            npm --prefix "$dir" install && npm --prefix "$dir" run build
-          fi
-        done
+        npm ci --omit=dev --workspace=.github/actions
+        npm run build --workspace=.github/actions
       shell: bash
