--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "workspaces": [
     "packages/*",
-    "services/*"
+    "services/*",
+    ".github/actions/*"
   ],
   "scripts": {
     "type-check": "npm run type-check --workspaces --if-present",
