npm ci --no-workspaces

--- a/.github/actions/repo-warm-up/action.yml
+++ b/.github/actions/repo-warm-up/action.yml
@@ -27,6 +27,7 @@ runs:
 
     - name: Install and Build TypeScript Actions
       run: |
+        npm ci --no-workspaces
         npm ci --workspace=.github/actions
         npm run build --workspace=.github/actions
       shell: bash
