Call warm upo repo from many places

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,16 +10,9 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: |
-          npm ci
+
+      - name: Repo Warm Up
+        uses: ./.github/actions/repo-warm-up
           
       - name: Run ESLint
         run: npm run lint 
