--- a/.github/actions/repo-warm-up/action.yml
+++ b/.github/actions/repo-warm-up/action.yml
@@ -25,8 +25,16 @@ runs:
         echo "NAMESPACE=$NAMESPACE" >> $GITHUB_OUTPUT
       shell: bash
 
-    - name: Install and Build TypeScript Actions
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '22'
+        cache: 'npm'
+    
+    - name: Install dependencies
       run: |
         npm ci
+
+    - name: Build TypeScript Actions
+      run: |
         npm run build --workspace=.github/actions
-      shell: bash
