--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,18 +17,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: ./.github/actions/repo-warm-up
+      - name: Repo Warm Up
+        uses: ./.github/actions/repo-warm-up
 
       - name: Configure AWS credentials
         uses: ./.github/actions/aws-warm-up
-
-      - name: Use Node.js 22.x
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22.x'
-
-      - name: Install Dependencies
-        run: npm ci
       
       - name: Run Jest Test Suite
         run: npm test
