--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -16,15 +16,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: ./.github/actions/repo-warm-up
-
-      - name: Use Node.js 22.x
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22.x'
-
-      - name: Install Dependencies
-        run: npm ci
+      - name: Repo Warm Up
+        uses: ./.github/actions/repo-warm-up
       
       - name: Run Type Check
         run: npm run type-check
