--- a/.github/actions/repo-warm-up/action.yml
+++ b/.github/actions/repo-warm-up/action.yml
@@ -34,7 +34,9 @@ runs:
     - name: Install dependencies
       run: |
         npm ci
+      shell: bash
 
     - name: Build TypeScript Actions
       run: |
         npm run build --workspace=.github/actions
+      shell: bash
