--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Configure AWS credentials
         uses: ./.github/actions/aws-warm-up
+        with:
+          aws_account_id: ${{ secrets.AWS_ACCOUNT_ID }}
       
       - name: Run Jest Test Suite
         run: npm test
