--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -6,9 +6,12 @@ on:
     workflows: ["Terraform Apply"]
     types:
       - completed
+    branches:
+      - main
 
 jobs:
   build_and_push:
+    if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion != 'failure' }}
     permissions:
       contents: read
       id-token: write
