--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -8,7 +8,6 @@ on:
   workflow_dispatch:
   pull_request:
     types: closed
-    branches: main
   schedule:
     - cron: '0 6 * * *'  # Every day at 06:00 UTC
 
@@ -24,8 +23,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - uses: ./.github/actions/repo-warm-up
+      - name: Repo Warm Up
         id: repo_warm_up
+        uses: ./.github/actions/repo-warm-up
 
       - name: Configure AWS credentials
         uses: ./.github/actions/aws-warm-up
