--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           helmfile sync -f kubernetes/helmfile.yaml \
           -l group=app \
+          --wait --args "--timeout 60s" \
           --environment=${{ inputs.environment }} \
           --namespace=${{ inputs.namespace || steps.repo_warm_up.outputs.adhoc_namespace }} \
           --set postrixImage.tag=${{ steps.repo_warm_up.outputs.git_hash }}
