Updated terraform applies

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,57 +1,69 @@
-name: "Terraform Plan"
+name: Terraform Plan
 
 on:
   pull_request:
+    paths:
+      - terraform/**
 
 env:
-  TF_CLOUD_ORGANIZATION: "postrix"
-  TF_API_TOKEN: "${{ secrets.TERRAFORM_API_TOKEN }}"
-  TF_WORKSPACE: "postrix"
-  CONFIG_DIRECTORY: "./terraform"
+  TF_CLOUD_ORGANIZATION: postrix
+  TF_API_TOKEN: ${{ secrets.TERRAFORM_API_TOKEN }}
+  TF_WORKSPACE: postrix
+  CONFIG_DIRECTORY: ./terraform
 
 jobs:
   terraform-plan:
-    name: "Terraform Plan"
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       pull-requests: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: ./.github/actions/repo-warm-up
+      - name: Repo Warm Up
+        uses: ./.github/actions/repo-warm-up
 
       - name: Upload Configuration
-        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
-        id: plan-upload
+        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.3.2
+        id: upload
         with:
           workspace: ${{ env.TF_WORKSPACE }}
           directory: ${{ env.CONFIG_DIRECTORY }}
           speculative: true
 
       - name: Create Plan Run
-        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
-        id: plan-run
+        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.3.2
+        id: run
         with:
           workspace: ${{ env.TF_WORKSPACE }}
-          configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id }}
+          configuration_version: ${{ steps.upload.outputs.configuration_version_id }}
           plan_only: true
 
       - name: Get Plan Output
-        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
-        id: plan-output
+        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.3.2
+        id: output
         with:
-          plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
+          plan: ${{ steps.run.outputs.plan_id }}
 
       - name: Comment PR
         uses: ./.github/actions/comment-pr
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          title: "Terraform Cloud Plan Output"
+          title: Terraform Cloud Plan Output
           block: >
-            Plan: ${{ steps.plan-output.outputs.add }} to add, 
-            ${{ steps.plan-output.outputs.change }} to change, 
-            ${{ steps.plan-output.outputs.destroy }} to destroy.
+            Plan: ${{ steps.output.outputs.add }} to add, 
+            ${{ steps.output.outputs.change }} to change, 
+            ${{ steps.output.outputs.destroy }} to destroy.
           message: |
-            [Terraform Cloud Plan](${{ steps.plan-run.outputs.run_link }})
+            [Terraform Cloud Plan](${{ steps.run.outputs.run_link }})
+
+      - name: Check Run Status
+        if: ${{ steps.run.outputs.run_status != 'planned_and_finished'}}
+        run: |
+          echo "HCP Terraform Run Failed or Requires Further Attention"
+          echo "Run Status: '${{ steps.run.outputs.run_status }}'"
+          echo "${{ steps.run.outputs.run_link }}"
+          exit 1
