--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -2,15 +2,14 @@ name: Type Check
 
 on:
   pull_request:
-    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-      id-token: write
+
+    # permissions:
+    #   contents: read
+    #   id-token: write
 
     steps:
       - name: Checkout
