--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -7,9 +7,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    # permissions:
-    #   contents: read
-    #   id-token: write
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout
