--- a/.github/actions/aws-warm-up/action.yml
+++ b/.github/actions/aws-warm-up/action.yml
@@ -1,11 +1,6 @@
 name: 'AWS Warm Up'
 description: 'Warm up AWS resources for GitHub Actions'
 
-inputs:
-  aws_account_id:
-    description: 'AWS account ID'
-    required: true
-
 runs:
   using: 'composite'
   steps:
@@ -13,7 +8,7 @@ runs:
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-region: us-east-1
-        role-to-assume: arn:aws:iam::${{ inputs.aws_account_id }}:role/github-actions-role
+        role-to-assume: arn:aws:iam::384389382109:role/github-actions-role
 
     - name: Update kubeconfig
       run: |
