--- a/kubernetes/common/templates/deployment.yaml
+++ b/kubernetes/common/templates/deployment.yaml
@@ -29,6 +29,7 @@ spec:
             requests:
               cpu: {{ .Values.resources.requests.cpu }}
               memory: {{ .Values.resources.requests.memory }}
+          {{- if ne .Values.env "local" }}
           readinessProbe:
             httpGet:
               path: /health
@@ -43,3 +44,4 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 10
             failureThreshold: 3
+          {{- end }}
