--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,8 @@
   "cSpell.words": [
     "bitnami",
     "Capish",
+    "Creatomate",
+    "Googlebot",
     "helmfile",
     "joby",
     "kubeconfig",
