--- a/services/capish/package.json
+++ b/services/capish/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.772.0",
     "@aws-sdk/client-secrets-manager": "^3.758.0",
     "@aws-sdk/credential-providers": "^3.758.0",
+    "creatomate": "file:../../packages/creatomate",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "whatsapp": "file:../../packages/whatsapp"
