--- a/services/capish/package.json
+++ b/services/capish/package.json
@@ -18,5 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "whatsapp": "file:../../packages/whatsapp"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.1"
   }
 }
