--- a/services/cannon/envs/dev.env
+++ b/services/cannon/envs/dev.env
@@ -1,2 +1,1 @@
-PORT: "8082"
-ENV: "development"
+DATABASE_URL: "postgresql://postgres:postgres@postgresql.postgresql.svc.cluster.local:5432/postgres?schema=public"
