--- a/services/cannon/package.json
+++ b/services/cannon/package.json
@@ -11,9 +11,11 @@
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "pg": "^8.14.0"
+    "pg": "^8.14.0",
+    "prisma": "^6.6.0"
   },
   "devDependencies": {
     "@types/pg": "^8.11.11"
