--- a/services/cannon/package.json
+++ b/services/cannon/package.json
@@ -11,6 +11,8 @@
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.787.0",
+    "@aws-sdk/credential-providers": "^3.787.0",
     "@prisma/client": "^6.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
