Added proper database connection

--- a/services/cannon/envs/prod.env
+++ b/services/cannon/envs/prod.env
@@ -1,1 +1,1 @@
-DATABASE_URL: "postgresql://postgres:postgres@postgresql.postgresql.svc.cluster.local:5432/postgres?schema=public"
+DATABASE: "cannon"
