--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -8,6 +8,11 @@ on:
       - completed
     branches:
       - main
+  push:
+    branches:
+      - main
+    paths:
+      - '!terraform/**'
 
 concurrency:
   group: build-and-deploy
