test tigger on both changes

--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -8,6 +8,7 @@ on:
       - completed
     branches:
       - main
+  # Only trigger if there were no changes in terraform
   push:
     branches:
       - main
