Updated to have a merged certificate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
   },
   "cSpell.words": [
     "autoincrement",
+    "awsdns",
     "bitnami",
     "Capish",
     "Creatomate",
@@ -34,6 +35,7 @@
     "postrix",
     "rabbitmq",
     "sealedbox",
+    "toybuttons",
     "yuvadius"
   ],
   "files.exclude": {
