--- a/kubernetes/common/templates/ingress.yaml
+++ b/kubernetes/common/templates/ingress.yaml
@@ -19,8 +19,28 @@ spec:
             name: {{ .Release.Name }}
             port:
               number: {{ .Values.ingressPort }}
+  - host: {{ if eq .Release.Namespace "prod" }}{{ printf "%www.%s.postrix.io" .Release.Name }}{{ else }}{{ printf "www.%s-%s.postrix.io" .Release.Namespace .Release.Name }}{{ end }}
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}
+            port:
+              number: {{ .Values.ingressPort }}
   {{- if .Values.ingress.additionalHost }}
   - host: {{ .Values.ingress.additionalHost }}
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}
+            port:
+              number: {{ .Values.ingressPort }}
+  - host: {{ printf "%www.%s" .Values.ingress.additionalHost}}
     http:
       paths:
       - path: /
