--- a/kubernetes/ingress-controller/values/defaults.yaml
+++ b/kubernetes/ingress-controller/values/defaults.yaml
@@ -9,9 +9,17 @@ controller:
       https: http
     annotations:
       service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
-      service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:384389382109:certificate/c5ccf977-48fe-4045-afdd-b1f61d77fc2a"
+      service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:384389382109:certificate/3dfbbdba-73c0-4571-a8f5-c5ce6c497d3c"
       service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
   config:
     use-forwarded-headers: "true"
     proxy-real-ip-cidr: "0.0.0.0/0"
     enable-real-ip: "true"
+    server-snippet: |
+      # Redirect any www.*.postrix.io to *.postrix.io
+      server {
+        listen 80;
+        listen 443 ssl;
+        server_name ~^www\.(.+)\.postrix\.io$;
+        return 301 $scheme://$1.postrix.io$request_uri;
+      }
