--- a/kubernetes/common/templates/ingress.yaml
+++ b/kubernetes/common/templates/ingress.yaml
@@ -30,5 +30,16 @@ spec:
             name: {{ .Release.Name }}
             port:
               number: {{ .Values.ingressPort }}
+  # Only a non dynamic hostname is supported with www prefix certificate
+  - host: {{ printf "www.%s" .Values.ingress.additionalHost }}
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}
+            port:
+              number: {{ .Values.ingressPort }}
   {{- end }}
 {{- end }}
