--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -7,6 +7,8 @@ repositories:
     url: https://kubernetes.github.io/ingress-nginx
   - name: autoscaler
     url: https://kubernetes.github.io/autoscaler
+  - name: eks
+    url: https://aws.github.io/eks-charts
 
 environments:
   local: {}
@@ -14,10 +16,19 @@ environments:
   prod: {}
 
 releases:
+  - name: ingress-controller-nlb
+    namespace: ingress-nginx-nlb
+    chart: ingress-nginx/ingress-nginx
+    version: 4.12.1
+    labels:
+      app: ingress-controller-nlb
+    values:
+      - ./ingress-controller-nlb/values/defaults.yaml
+
   - name: cluster-autoscaler
     namespace: kube-system
     chart: autoscaler/cluster-autoscaler
-    version: "9.46.0"
+    version: 9.46.0
     labels:
       app: cluster-autoscaler
     values:
