--- a/kubernetes/common/templates/ingress.yaml
+++ b/kubernetes/common/templates/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
-  ingressClassName: nginx-nlb
+  ingressClassName: nginx
   rules:
   - host: {{ if eq .Release.Namespace "prod" }}{{ printf "%s.postrix.io" .Release.Name }}{{ else }}{{ printf "%s-%s.postrix.io" .Release.Namespace .Release.Name }}{{ end }}
     http:
