--- a/kubernetes/ingress-controller/values/defaults.yaml
+++ b/kubernetes/ingress-controller/values/defaults.yaml
@@ -1,17 +1,24 @@
 controller:
+  ingressClassResource:
+    name: nginx
+    controllerValue: "k8s.io/ingress-nginx"
+    enabled: true
+  
   service:
     type: LoadBalancer
-    ports:
-      http: 80
-      https: 443
     targetPorts:
       http: http
       https: http
     annotations:
-      service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
+      service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+      service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
       service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:384389382109:certificate/3dfbbdba-73c0-4571-a8f5-c5ce6c497d3c"
       service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
+      service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+      service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
+  
   config:
+    use-proxy-protocol: "false"
     use-forwarded-headers: "true"
     proxy-real-ip-cidr: "0.0.0.0/0"
     enable-real-ip: "true"
