--- a/services/joby/package.json
+++ b/services/joby/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "logger": "file:../../packages/logger",
+    "redis": "^4.7.0",
     "whatsapp": "file:../../packages/whatsapp"
   }
 }
