--- a/services/joby/package.json
+++ b/services/joby/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.787.0",
     "@aws-sdk/credential-providers": "^3.787.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
+    "env-loader": "file:../../packages/env-loader",
     "express": "^4.18.2",
     "logger": "file:../../packages/logger",
-    "redis": "^4.7.0",
+    "redis": "file:../../packages/redis",
+    "secret-manager": "file:../../packages/secret-manager",
     "whatsapp": "file:../../packages/whatsapp"
   }
 }
