--- a/services/cannon/envs/default.env
+++ b/services/cannon/envs/default.env
@@ -1,1 +1,9 @@
-PORT: 8082
+PORT=8082
+
+ELASTICSEARCH_USERNAME=elastic
+ELASTICSEARCH_PASSWORD=/secrets/elasticsearch/password
+REDIS_PASSWORD=/secrets/redis/password
+POSTGRES_USERNAME=/secrets/postgres/username
+POSTGRES_PASSWORD=/secrets/postgres/password
+POSTGRES_HOST=/secrets/postgres/host
+POSTGRES_PORT=/secrets/postgres/port
