--- a/services/joby/envs/dev.env
+++ b/services/joby/envs/dev.env
@@ -1,6 +1,1 @@
-PORT: "8080"
-ENV: "development"
-
-ELASTICSEARCH_USERNAME=elastic
-ELASTICSEARCH_PASSWORD=/secrets/elasticsearch/password
-REDIS_PASSWORD=/secrets/redis/password
+ENV=development
