--- a/services/cannon/package.json
+++ b/services/cannon/package.json
@@ -11,13 +11,12 @@
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
   "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.787.0",
-    "@aws-sdk/credential-providers": "^3.787.0",
     "@prisma/client": "^6.6.0",
-    "dotenv": "^16.4.5",
+    "env-loader": "file:../../packages/env-loader",
     "express": "^4.18.2",
     "pg": "^8.14.0",
-    "prisma": "^6.6.0"
+    "prisma": "^6.6.0",
+    "secret-manager": "file:../../packages/secret-manager"
   },
   "devDependencies": {
     "@types/pg": "^8.11.11"
