--- a/services/capish/package.json
+++ b/services/capish/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.772.0",
-    "@aws-sdk/client-secrets-manager": "^3.758.0",
-    "@aws-sdk/credential-providers": "^3.758.0",
+    "@aws-sdk/credential-providers": "^3.799.0",
     "creatomate": "file:../../packages/creatomate",
-    "dotenv": "^16.4.5",
+    "env-loader": "file:../../packages/env-loader",
     "express": "^4.18.2",
+    "secret-manager": "file:../../packages/secret-manager",
     "whatsapp": "file:../../packages/whatsapp"
   },
   "devDependencies": {
