Added s3Client export to file system

--- a/packages/file-system/package.json
+++ b/packages/file-system/package.json
@@ -7,5 +7,9 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.802.0",
+    "@aws-sdk/credential-providers": "^3.799.0"
   }
 }
