--- a/services/capish/package.json
+++ b/services/capish/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.772.0",
-    "@aws-sdk/credential-providers": "^3.799.0",
     "creatomate": "file:../../packages/creatomate",
     "env-loader": "file:../../packages/env-loader",
     "express": "^4.18.2",
+    "file-system": "file:../../packages/file-system",
     "secret-manager": "file:../../packages/secret-manager",
     "whatsapp": "file:../../packages/whatsapp"
   },
