--- a/services/capish/envs/default.env
+++ b/services/capish/envs/default.env
@@ -6,3 +6,4 @@ REDIS_PASSWORD=/secrets/redis/password
 WHATSAPP_ACCESS_TOKEN=/secrets/capish-whatsapp-api/access_token
 WHATSAPP_PHONE_ID=/secrets/capish-whatsapp-api/phone_id
 CREATOMATE_API_KEY=/secrets/creatomate/api_key
+CREATOMATE_API_KEY_TRIAL=/secrets/creatomate/api_key_trial
