--- a/services/cannon/package.json
+++ b/services/cannon/package.json
@@ -11,12 +11,9 @@
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0",
+    "cannon-db": "file:../../packages/cannon-db",
     "env-loader": "file:../../packages/env-loader",
-    "express": "^4.18.2",
-    "pg": "^8.14.0",
-    "prisma": "^6.6.0",
-    "secret-manager": "file:../../packages/secret-manager"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/pg": "^8.11.11"
