--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -27,5 +27,5 @@ jobs:
         uses: ./.github/actions/aws-warm-up
 
       - name: DB Migrate
-        working-directory: packages/db
+        working-directory: packages/cannon-db
         run: DATABASE_URL='${{ secrets.DATABASE_INSTANCE_URL }}/${{ inputs.db }}?schema=${{ steps.repo_warm_up.outputs.adhoc_namespace }}' npm run migrate:deploy
